--- a/.gitattributes
+++ b/.gitattributes
@@ -58,3 +58,7 @@
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
 firs.obj filter=lfs diff=lfs merge=lfs -text
+forest.obj filter=lfs diff=lfs merge=lfs -text
+forrest.obj filter=lfs diff=lfs merge=lfs -text
+village.obj filter=lfs diff=lfs merge=lfs -text
+*.obj filter=lfs diff=lfs merge=lfs -text
